post contact and page about

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
-    "prettier.printWidth": 100,
-    "prettier.endOfLine": "lf",
-    "prettier.bracketSameLine": false,
-    "prettier.proseWrap": "preserve",
-    "prettier.useTabs": true,
-    "prettier.tabWidth": 2,
-    "prettier.useEditorConfig": false
+	"prettier.printWidth": 100,
+	"prettier.endOfLine": "lf",
+	"prettier.bracketSameLine": false,
+	"prettier.proseWrap": "preserve",
+	"prettier.useTabs": true,
+	"prettier.tabWidth": 2,
+	"prettier.useEditorConfig": false,
+	"liveServer.settings.port": 5501
 }
